# xdbx

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: publish-workflow.yml  python-app.yml
db86/: __init__.py  rest_shell.py  shell.py  storages.py  threads.py
db86/service/: rest_service.py
tests/: test_core.py  test_database.py  test_jsonstorage.py  test_perf.py  test_rest_service.py  test_rest_shell.py  test_table.py
xdbx/: __init__.py  connectors.py  database.py  handler.py  rest_shell.py  service.py  shell.py  storages.py  threads.py  transaction.py
xdbx/service/: __init__.py  client.py  handler.py  protocol.py  rest_service.py  udp_service.py
