[tool.poetry]
name = "XDBX"
version = "0.5.1"
description = "XDBX DataBase eXtention"
authors = ["Anubhav Mattoo <anubhavmattoo@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
click-shell = "^2.1"
lark = "^1.2.2"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
tabulate = "^0.10.0"

[tool.poetry.scripts]
sdbx = "xdbx.shell:cli"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "unit: marks tests as unit tests"
]