[tool.poetry]
name = "db86"
version = "0.6.2"
description = "A robust Python wrapper around SQLite3 providing dict-like API, multi-threading support, and REST service endpoints"
authors = ["Anubhav Mattoo <anubhavmattoo@outlook.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/anubhav-narayan/db86"
repository = "https://github.com/anubhav-narayan/db86"
documentation = "https://github.com/anubhav-narayan/db86#readme"
keywords = ["sqlite", "database", "json-storage", "rest-api", "cli", "threading"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.10"
click-shell = "^2.1"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
tabulate = "^0.10.0"
asyncclick = "8.1.8"
daemonocle = "^1.2.3"

[tool.poetry.scripts]
sdbx = "xdbx.shell:cli"
restx = "xdbx.rest_shell:cli"
xdbx-server = "xdbx.service.rest_service:cli"

[tool.poetry.group.dev.dependencies]
lark = "^1.2.2"
pytest = "^9.0.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "unit: marks tests as unit tests"
]